--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <div class="sidebar-header">
             <i class="fas fa-times close-btn" onclick="toggleSidebar()"></i>
             <h3 class="header-title">ڕێکخستنەکان</h3>
-            <div style="width: 30px;"></div>
-        </div>
+            <div style="width: 25px;"></div> </div>
         
         <div class="sidebar-content">
             <details class="menu-item">
@@ -29,24 +28,32 @@
                 <div class="adhan-options">
                     <div class="adhan-choice">
                         <label><input type="radio" name="adhan" checked> مەککە</label>
-                        <i class="fas fa-play-circle play-btn" onclick="handlePreview(this, 'https://www.islamcan.com/audio/adhan/azan1.mp3')"></i>
+                        <i class="fas fa-play-circle play-btn" onclick="handleAdhan(this, 'https://www.islamcan.com/audio/adhan/azan1.mp3')"></i>
                     </div>
                     <div class="adhan-choice">
                         <label><input type="radio" name="adhan"> مەدینە</label>
-                        <i class="fas fa-play-circle play-btn" onclick="handlePreview(this, 'https://www.islamcan.com/audio/adhan/azan2.mp3')"></i>
+                        <i class="fas fa-play-circle play-btn" onclick="handleAdhan(this, 'https://www.islamcan.com/audio/adhan/azan2.mp3')"></i>
+                    </div>
+                    <div class="adhan-choice">
+                        <label><input type="radio" name="adhan"> عبدالباسط</label>
+                        <i class="fas fa-play-circle play-btn" onclick="handleAdhan(this, 'https://www.islamcan.com/audio/adhan/azan16.mp3')"></i>
+                    </div>
+                    <div class="adhan-choice">
+                        <label><input type="radio" name="adhan"> ئیسماعیل کۆچەر</label>
+                        <i class="fas fa-play-circle play-btn" onclick="handleAdhan(this, 'https://www.islamcan.com/audio/adhan/azan10.mp3')"></i>
                     </div>
                 </div>
             </details>
 
-            <a href="https://youtube.com/@Daryan" class="menu-link youtube-link-custom">
-                <i class="fab fa-youtube yt-red"></i> <span class="yt-text">ئێمە لە یوتیوب</span>
+            <a href="https://youtube.com/@Daryan" class="menu-link youtube-white">
+                <i class="fab fa-youtube"></i> ئێمە لە یوتیوب
             </a>
             
             <details class="menu-item">
                 <summary><i class="fas fa-info-circle"></i> دەربارە</summary>
                 <div class="about-info">
                     <p>گەشەپێدەر: داریان</p>
-                    <p>وەشان: ٢.٧.٠</p>
+                    <p>وەشان: ٢.٥.٠</p>
                 </div>
             </details>
         </div>
@@ -54,7 +61,7 @@
 
     <main class="container">
         <div class="clock-area">
-            <div id="liveClock" class="clock"></div>
+            <div id="liveClock" class="clock">٠٠ : ٠٠ : ٠٠ <span class="suffix">پ.ن</span></div>
         </div>
 
         <div class="date-section">
@@ -66,7 +73,7 @@
             </div>
         </div>
 
-        <div id="countdown" class="timer-tag big-timer"></div>
+        <div id="countdown" class="timer-tag big-timer">بارکردن...</div>
 
         <div class="select-wrapper">
             <select id="citySelect" class="city-box green-dark-dropdown" onchange="updateCity()">
